@@ -32,7 +32,7 @@
       </p>
 
       <p>
-        July 27, 2020
+        August 14, 2020
       </p>
     </center>
 
@@ -740,6 +740,17 @@
           paintbrush, or affecting the entire canvas at once. This
           option disables the controls, and only provides the
           default functionality (usually paint-mode).
+        </dd>
+
+        <dt>
+          <code><b>noshapecontrols=yes</b></code>
+        </dt>
+
+        <dd>
+          Disable the control buttons shown when using the <b>Shapes</b>
+          tool that allow changing how shapes are drawn &mdash;
+          centered around the initial mouse click, or with a corner
+          at the initial mouse click.
         </dd>
 
         <dt>
@@ -3090,6 +3101,7 @@
             --nostamps<br>
             --nostampcontrols<br>
             --nomagiccontrols<br>
+            --noshapecontrols<br>
             --nolabel<br>
             --newcolorslast<br>
             --mouse-accessibility<br>
@@ -3170,6 +3182,7 @@
             --stamps<br>
             --stampcontrols<br>
             --magiccontrols<br>
+            --shapecontrols<br>
             --label<br>
             --newcolorsfirst<br>
             --nosysfonts<br>
