@@ -124,6 +124,7 @@ lang,                MULTI(parsertmp_lang)
 locale,              MULTI(parsertmp_locale)
 lockfile,            POSBOOL(ok_to_use_lockfile)
 magiccontrols,       NEGBOOL(disable_magic_controls)
+shapecontrols,       NEGBOOL(disable_shape_controls)
 mirrorstamps,        POSBOOL(mirrorstamps)
 mixedcase,           NEGBOOL(only_uppercase)
 mouse,               NEGBOOL(keymouse)
