@@ -15,6 +15,7 @@ struct cfginfo
   const char *datadir;
   const char *disable_label;
   const char *disable_magic_controls;
+  const char *disable_shape_controls;
   const char *disable_print;
   const char *disable_quit;
   const char *disable_save;
